[NO ISSUE][TEST] Remove invalid JVM args from tests
- user model changes: no
- storage format changes: no
- interface changes: no

Details:

- Remove invalid JVM args from tests.
- Fix resource computer test.

Ex-ref: MB-64402
Change-Id: I2c409b46fa0a23b8fe5c55eba06d95851ed2a08d
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19136
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Murtadha Hubail <mhubail@apache.org>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>